Fix icon bar spacing

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -84,7 +84,7 @@ ul {
     margin: 0;
     background: rgb(var(--zn-panel));
     border: 1px solid rgb(var(--zn-border-color));
-    flex-basis: auto;
+    flex-basis: 100%;
   }
 
 
